--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 16px;
+  box-sizing: border-box;
+  /*body is positioned relatively */
+  position: relative;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* To ensure that content is above the background pseudo-element */
+  z-index: 0;
 }
 
-.App-link {
-  color: #61dafb;
+body::before {
+  content: "";
+  /* Change to fixed to cover entire viewport */
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  /* To ensure that the pseudo-element is behind the content */
+  z-index: -1;
+ 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body.light-mode::before {
+  background-image: url('../public/bg-light.jpg');
+  opacity: 0.7;
+  /* Set the opacity of the overlay */
+}
+
+body.dark-mode::before {
+  background-image: url('../public/bg-dark.jpg');
+  opacity: 0.18;
+  /* Set the opacity of the overlay */
 }
